<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:id="@id/tv_empty_text"
        android:textColor="@color/app_color_light"
        android:gravity="left"
        android:padding="10dp"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_selector_bg"
        android:layout_alignParentRight="true"
        android:text="今天暂无活动哦~"/>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/layout_home_event"
        style="@style/HomeLayout"
        android:background="@drawable/popup_selector_bg"
        >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HomeLayoutCell">


            <TextView
                android:id="@id/tv_event_name"
                style="@style/HomeText.Sub"
                android:layout_toLeftOf="@+id/square"/>

            <TextView
                android:id="@+id/square"
                style="@style/HomeText.XLarge"
                android:gravity="center"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@drawable/home_layout_border"
                android:layout_alignParentRight="true"
                android:text="@string/label_home_event_name"/>

        </RelativeLayout>


        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_event_time"/>

            <TextView
                android:id="@id/tv_event_time"
                style="@style/HomeText.Large"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_event_content"/>

            <TextView
                android:id="@id/tv_event_content"
                style="@style/HomeText.Large"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_event_location"/>

            <TextView
                android:id="@id/tv_event_location"
                style="@style/HomeText.Large"/>

        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_event_department"/>

            <TextView
                android:id="@id/tv_event_department"
                style="@style/HomeText.Large"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>