<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:id="@id/tv_empty_text"
        android:textColor="@color/app_color_light"
        android:gravity="left"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_selector_bg"
        android:layout_alignParentRight="true"
        android:text="今日无十大哦～"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_home_forum"
        style="@style/HomeLayout"
        android:background="@drawable/popup_selector_bg">

        <RelativeLayout
            style="@style/HomeLayoutCell">

            <TextView
                android:id="@id/tv_forum_title"
                style="@style/HomeText.Sub"
                android:layout_toLeftOf="@+id/square"/>

            <TextView
                android:id="@+id/square"
                style="@style/HomeText.XLarge"
                android:gravity="center"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@drawable/home_layout_border"
                android:layout_alignParentRight="true"
                android:text="@string/label_home_forum_name"/>
        </RelativeLayout>


        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_forum_author"/>

            <TextView
                android:id="@id/tv_forum_author"
                style="@style/HomeText.Large"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_forum_content"/>

            <TextView
                style="@style/HomeText.Large"
                android:id="@id/tv_forum_content"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayoutCell">

            <TextView
                style="@style/HomeText.Large"
                android:text="@string/label_forum_publish_date"/>

            <TextView
                style="@style/HomeText.Large"
                android:id="@id/tv_forum_publish_date"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>